# 24-days-of-rust

day_2_primes/: Cargo.toml
day_2_primes/src/: main.rs
day_3_csv/: Cargo.toml
day_3_csv/assets/: sample.csv
day_3_csv/src/: main.rs
day_6_lang/: Cargo.toml
day_6_lang/src/: lib.rs  utils.rs
